--- a/02_Regular_Expression/02_Regular_Expression_Applications.ipynb
+++ b/02_Regular_Expression/02_Regular_Expression_Applications.ipynb
@@ -300,12 +300,338 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 제네레이터(Generator , 발생자)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(200, 30)\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기존의 함수 호출 방식은 함수가 호출될 때 인수들의 내부 변수들이 새로운 영역(스택)에 \n",
+    "# 만들어지고 반환시 메모리에서 소멸된다\n",
+    "def f(a,b):\n",
+    "    c = a * b\n",
+    "    d = a + b\n",
+    "    return c,d\n",
+    "\n",
+    "print(f(10,20))\n",
+    "print(f(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n",
+      "1st step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 제네레이터는 중단된 시점부터 재 실행이 가능한 함수\n",
+    "# return 대신에 키워드 yield를 사용한다\n",
+    "\n",
+    "def gen_func():\n",
+    "    print('1st step')\n",
+    "    yield 1\n",
+    "    print('2nd step')\n",
+    "    yield 2\n",
+    "    print('3nd step')\n",
+    "    yield 3  \n",
+    "    \n",
+    "g = gen_func()  # generator 객체를 생성한다\n",
+    "print(type(g))\n",
+    "\n",
+    "a = next(g)   # 최초 호출\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2nd step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = next(g)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3nd step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = next(g)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 <class 'generator'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# genertor를 for 문으로 호출\n",
+    "def generator_ints(N):\n",
+    "    for k in range(N):\n",
+    "        yield k\n",
+    "        \n",
+    "for k in generator_ints(10):\n",
+    "    print(k,end=' ')\n",
+    "\n",
+    "print(type(generator_ints(10))) #  제네레이터는 반복자 객체이다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 코루틴(Coroutine)\n",
+    ": 함수 실행에 있어서 어떤 위치에서 중단과 실행이 가능한 다중 진입점이 있는 일반화된 함수를 말한다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ['a','b','c'] ==> 'a|b|c'"
+    "def echo():\n",
+    "    print('echo routine')\n",
+    "    while True:\n",
+    "        msg = (yield)\n",
+    "        print('echo:',msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n",
+      "echo routine\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = echo() # 코루틴 객체를 생성\n",
+    "print(type(e))   # <class 'generator'>\n",
+    "next(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "echo: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "next(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "echo: Hello~\n"
+     ]
+    }
+   ],
+   "source": [
+    "e.send('Hello~')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "echo: Bye~\n"
+     ]
+    }
+   ],
+   "source": [
+    "e.send('Bye~')\n",
+    "e.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 양방향 값 전송 코루틴\n",
+    "def accumulate(value = 0):\n",
+    "    acc = value\n",
+    "    while True:\n",
+    "        value = (yield acc,value)\n",
+    "        acc += value\n",
+    "        \n",
+    "acc = accumulate(1) \n",
+    "print(type(acc))\n",
+    "next(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc.send(2)   # 2를 value에 전달해주고 다음 yield문 까지 진행 ,(3,2)를 반환 받는다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 3)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc.send(3)   # 3를 value에 전달해주고 다음 yield문 까지 진행 ,(6,3)를 반환 받는다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc.close()   # 코루틴을 종료한다"
    ]
   },
   {
@@ -317,10 +643,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 10), match='Hello Rosa'>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "r = \"(hi|hello|hey)[ ]*([a-z]*)\"\n",
+    "re.match(r,'Hello Rosa',re.I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 5), match='hi ho'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.match(r,\"hi ho, hi hoho, it's off to work...\",re.I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='hey'>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.match(r,\"hey, what's up\",re.I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 정규 표현식을 더 확장\n",
+    "r = r\"[^a-z]*([y]o|[h]?ello|ok|hey|(good[ ])?(morn[gin']{0,3}|afternoon|even[gin']{0,3}))[\\s,:;]{1,3}([a-z]{1,20})\"                                            \n",
+    "re_greeting = re.compile(r,re.I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 10), match='Hello Rosa'>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re_greeting.match('Hello Rosa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 17), match='Good morning Rosa'>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re_greeting.match('Good morning Rosa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re_greeting.match('Good marning Rosa')  # 실패"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Good evening', 'Good ', 'evening', 'Rosa')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re_greeting.match('Good evening Rosa Parks').groups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 16), match=\"Good morn'n Rosa\">"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re_greeting.match(\"Good morn'n Rosa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 7), match='yo Rosa'>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re_greeting.match(\"yo Rosa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning, baby\n",
+      "Hi 길동, How are you? Glad to see you.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chatbot\n",
+    "r = r\"[^a-z]*([y]o|[h]?ello|ok|hey|(good[ ])?(morn[gin']{0,3}|afternoon|even[gin']{0,3}))[\\s,:;]{1,3}([a-z]{1,20})\"                                            \n",
+    "re_greeting = re.compile(r,re.I)\n",
+    "\n",
+    "my_names = set(['rosa','rose','chatty','chatbot','bot','chatterbot','baby']) # 좋은 단어\n",
+    "curt_names = set(['hal','you','u','guy','boy']) # 무뚜뚝한 단어\n",
+    "greeter_name = '길동' # 대화 상대자 (사람)\n",
+    "\n",
+    "match = re_greeting.match(input())  # 'Hello Rosa'\n",
+    "\n",
+    "if match:\n",
+    "    at_name = match.groups()[-1] # 4개 그룹중 마지막 그룹\n",
+    "    if at_name in curt_names:\n",
+    "        print('Um.. Have a good time.')\n",
+    "    elif at_name.lower() in my_names:\n",
+    "        print('Hi {}, How are you? Glad to see you.'.format(greeter_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-28-e394139185cf>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-28-e394139185cf>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    대화가 시작되었습니다!\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습 : 챗봇 소스에 기능 추가\n",
+    "# evil_names 목록을 넣어 대화에 사용하면 화를 내는 코드를 간단히 추가하고 동작을 확인 해보세요\n",
+    "# 영어 대답 아래에 동일한 한국어 대답도 출력하게 해보세요\n",
+    "# while True를 사용하여 match가 없을 때 종료하도록 수정하세요\n",
+    "# evil_names : set(['idiot','fool','ass','sob'])\n",
+    "\n",
+    "대화가 시작되었습니다!\n",
+    "----------------------------------------------------------------------\n",
+    "길동 : Hello Rosa\n",
+    "컴퓨터 : Hi 길동, How are you? Glad to see you.\n",
+    "컴퓨터 : 길동씨 안녕하세요,만나서 반갑습니다\n",
+    "----------------------------------------------------------------------\n",
+    "길동 : Hi you\n",
+    "컴퓨터 : Um.. Have a good time.\n",
+    "컴퓨터 : 음.. 즐거운 시간 되세요.\n",
+    "----------------------------------------------------------------------\n",
+    "길동 : Hey idiot\n",
+    "컴퓨터 : Dear 길동 please, don't talk to me like that : idiot. \n",
+    "컴퓨터 : 길동아! 제발 그런말 쓰지마! : idiot. \n",
+    "----------------------------------------------------------------------\n",
+    "길동 : Bye\n",
+    "대화가 종료되었습니다!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "대화가 시작되었습니다!\n",
+      "----------------------------------------------------------------------\n",
+      "길동 : Hello Rosa\n",
+      "컴퓨터 : Hi 길동, How are you? Glad to see you.\n",
+      "컴퓨터 : 길동씨 안녕하세요,만나서 반갑습니다\n",
+      "----------------------------------------------------------------------\n",
+      "길동 : Hey guy\n",
+      "컴퓨터 : Um.. Have a good time.\n",
+      "컴퓨터 : 음.. 즐거운 시간 되세요.\n",
+      "----------------------------------------------------------------------\n",
+      "길동 : Hey idiot\n",
+      "컴퓨터 : Dear 길동 please, don't talk to me like that : idiot. \n",
+      "컴퓨터 : 길동아! 제발 그런말 쓰지마! : idiot. \n",
+      "----------------------------------------------------------------------\n",
+      "길동 : Bye\n",
+      "대화가 종료되었습니다!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습 답안 : 챗봇 기능 추가 답안\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "r = r\"[^a-z]*([y]o|[h]?ello|ok|hi|hey|(good[ ])?(morn[gin']{0,3}|afternoon|even[gin']{0,3}))[\\s,:;]{1,3}([a-z]{1,20})\"                                            \n",
+    "re_greeting = re.compile(r, re.I)\n",
+    "my_names = set(['rosa','rose','chatty','chatbot','bot','chatterbot','baby']) # 좋은 단어들 리스트\n",
+    "curt_names = set(['hal','you','u','guy','boy']) # curt(무뚜뚝한) 이름, 다소 무례한 단어들 리스트\n",
+    "evil_names = set(['idiot','fool','ass','sob'])  # 나쁜 단어들 리스트\n",
+    "greeter_name = '길동'  # 대화 상대자(사람)\n",
+    "computer = '컴퓨터 :'\n",
+    "# match = re_greeting.match(input(greeter_name+' : '))\n",
+    "print('대화가 시작되었습니다!')\n",
+    "print('-'*70)\n",
+    "\n",
+    "while True:\n",
+    "    match = re_greeting.match(input(greeter_name+' : '))\n",
+    "    # print(match)\n",
+    "    if match :\n",
+    "        at_name = match.groups()[-1]\n",
+    "        # print(at_name)\n",
+    "        if at_name in curt_names:\n",
+    "            print(computer,\"Um.. Have a good time.\") \n",
+    "            print(computer,\"음.. 즐거운 시간 되세요.\")\n",
+    "        elif at_name.lower() in my_names:\n",
+    "            print(computer,\"Hi {}, How are you? Glad to see you.\".format(greeter_name))\n",
+    "            print(computer,\"{}씨 안녕하세요,만나서 반갑습니다\".format(greeter_name))\n",
+    "        elif at_name in evil_names:\n",
+    "            print(computer,\"Dear {0} please, don't talk to me like that : {1}. \".format(greeter_name,at_name))\n",
+    "            print(computer,\"{0}아! 제발 그런말 쓰지마! : {1}. \".format(greeter_name,at_name))\n",
+    "        print('-'*70)\n",
+    "    else:\n",
+    "        break\n",
+    "    \n",
+    "print('대화가 종료되었습니다!')"
+   ]
   }
  ],
  "metadata": {
