--- a/03_Neural_Network/03_Back_Propagation.ipynb
+++ b/03_Neural_Network/03_Back_Propagation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Repeat 노드"
+    "## Repeat Node"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sum 노드"
+    "## Sum Node"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MatMul 노드"
+    "## MatMul Node"
    ]
   },
   {
@@ -201,6 +201,7 @@
     "        W = self.params\n",
     "        out = np.dot(x,W)\n",
     "        self.x = x\n",
+    "        return out\n",
     "        \n",
     "    def backward(self,dout):\n",
     "        W = self.params\n",
@@ -307,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sigmoid 계층"
+    "## Sigmoid 계층"
    ]
   },
   {
@@ -332,11 +333,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Affine 계층 : MatMul 노드에 bias를 더한 계층,  X*W + b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Affine:\n",
+    "    def __init__(self,W):\n",
+    "        self.params = [W,b]\n",
+    "        self.grads = [np.zeros_like(W), np.zeros_like(b)]\n",
+    "        self.x = None\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        W, b = self.params\n",
+    "        out = np.dot(x,W) + b\n",
+    "        self.x = x\n",
+    "        return out\n",
+    "        \n",
+    "    def backward(self,dout):\n",
+    "        W, b = self.params\n",
+    "        dx = np.dot(dout,W.T)\n",
+    "        dw = np.dot(self.x.T,dout)\n",
+    "        db = np.sum(dout,axis=0)\n",
+    "        \n",
+    "        self.grads[0][...] = dw  # deep copy\n",
+    "        self.grads[1][...] = db\n",
+    "        \n",
+    "        return dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax with Loss 계층"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SoftmaxWithLoss:\n",
+    "    def __init__(self):\n",
+    "        self.params, self.grads = [],[]\n",
+    "        self.y = None  # softmax의 출력값\n",
+    "        self.t = None  # 정답 레이블\n",
+    "        \n",
+    "    def softmax(self,x):\n",
+    "        if x.ndim == 2:\n",
+    "            x = x-x.max(axis=1, keepdims=True)  # nan출력을 방지\n",
+    "            x = np.exp(x)\n",
+    "            x /= x.sum(axis=1, keepdims=True)\n",
+    "        elif x.dim == 1:\n",
+    "            x = x-np.max(x)\n",
+    "            x = np.exp(x)/np.sum(np.exp(x))\n",
+    "        return x\n",
+    "    \n",
+    "# https://smile2x.tistory.com/entry/softmax-crossentropy-%EC%97%90-%EB%8C%80%ED%95%98%EC%97%AC \n",
+    "    def cross_entropy_error(self,y,t):  \n",
+    "        if y.ndim == 1:\n",
+    "            t = t.reshape(1, t.size)\n",
+    "            y = y.reshape(1, y.size)\n",
+    "\n",
+    "        # 정답 데이터가 원핫 벡터일 경우 정답 레이블 인덱스로 변환\n",
+    "        if t.size == y.size:\n",
+    "            t = t.argmax(axis=1)\n",
+    "\n",
+    "        batch_size = y.shape[0]\n",
+    "\n",
+    "        return -np.sum(np.log(y[np.arange(batch_size), t] + 1e-7)) / batch_size  # 1e-7은 log(0)으로 무한대가 나오는걸 방지\n",
+    "\n",
+    "    def forward(self,x,t):\n",
+    "        self.t = t\n",
+    "        self.y = self.softmax(x)\n",
+    "        \n",
+    "        # 정답 데이터가 원핫 벡터일 경우 정답 레이블 인덱스로 변환\n",
+    "        if t.size == y.size:\n",
+    "            t = t.argmax(axis=1)\n",
+    "        \n",
+    "        loss = self.cross_entropy_error(self.y, self.t)\n",
+    "        return loss\n",
+    "    \n",
+    "    def backward(self,dout=1):\n",
+    "        batch_size = self.t.shape[0]\n",
+    "        \n",
+    "        # dx = (self.y-self.t)/batch_size  # 순수 Softmax 계층일 경우\n",
+    "        dx = self.y.copy()\n",
+    "        dx[np.arange(batch_size), self.t] -= 1\n",
+    "        dx *= dout\n",
+    "        dx = dx / batch_size\n",
+    "\n",
+    "        return dx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[inf inf inf]\n",
+      "[nan nan nan]\n",
+      "[  0 -10 -20]\n",
+      "[9.99954600e-01 4.53978686e-05 2.06106005e-09]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Wonseok\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# softmax 구현시에  지수값이 크면 overflow 발생으로 nan이 나오는 것을 방지하기 위해 입력 값의 최대값을 빼주어 사용한다\n",
+    "a = np.array([1010,1000,990])\n",
+    "print(np.exp(a))    # [inf inf inf]  , 무한대 값, 오버플로우 발생\n",
+    "x = np.exp(a)/np.sum(np.exp(a))\n",
+    "print(x)  # [nan nan nan]\n",
+    "\n",
+    "c = np.max(a)\n",
+    "print(a - c)\n",
+    "x2 = np.exp(a - c)/np.sum(np.exp(a - c))\n",
+    "print(x2)  # [9.99954600e-01 4.53978686e-05 2.06106005e-09]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weight 갱신"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 확률적 경사하강법(Stochastic Gradient Descent)\n",
+    "class SGD:\n",
+    "    def __init__(self,lr=0.01):\n",
+    "        self.lr = lr\n",
+    "        \n",
+    "    def update(self,params,grads):\n",
+    "        for i in range(len(params)):\n",
+    "            params[i] -= self.lr*grads[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Adam:\n",
+    "    '''\n",
+    "    Adam (http://arxiv.org/abs/1412.6980v8)\n",
+    "    \n",
+    "    '''\n",
+    "    def __init__(self, lr=0.001, beta1=0.9, beta2=0.999):\n",
+    "        self.lr = lr\n",
+    "        self.beta1 = beta1\n",
+    "        self.beta2 = beta2\n",
+    "        self.iter = 0\n",
+    "        self.m = None\n",
+    "        self.v = None\n",
+    "        \n",
+    "    def update(self, params, grads):\n",
+    "        if self.m is None:\n",
+    "            self.m, self.v = [], []\n",
+    "            for param in params:\n",
+    "                self.m.append(np.zeros_like(param))\n",
+    "                self.v.append(np.zeros_like(param))\n",
+    "        \n",
+    "        self.iter += 1\n",
+    "        lr_t = self.lr * np.sqrt(1.0 - self.beta2**self.iter) / (1.0 - self.beta1**self.iter)\n",
+    "\n",
+    "        for i in range(len(params)):\n",
+    "            self.m[i] += (1 - self.beta1) * (grads[i] - self.m[i])\n",
+    "            self.v[i] += (1 - self.beta2) * (grads[i]**2 - self.v[i])\n",
+    "            \n",
+    "            params[i] -= lr_t * self.m[i] / (np.sqrt(self.v[i]) + 1e-7)\n",
+    "            \n",
+    "# https://dalpo0814.tistory.com/29"
+   ]
   }
  ],
  "metadata": {
