--- a/03_Neural_Network/04_Neural_Network_Model.ipynb
+++ b/03_Neural_Network/04_Neural_Network_Model.ipynb
@@ -1047,6 +1047,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본: \n",
+      " [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "변환: \n",
+      " [[ 0  0  0  0]\n",
+      " [ 0  0  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(12).reshape(3,4)\n",
+    "print('원본: \\n',a)\n",
+    "a[a<=5] = 0 # boolean index\n",
+    "print('변환: \\n',a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
