--- a/04_NLP_Basics/01_Statistical_Methods.ipynb
+++ b/04_NLP_Basics/01_Statistical_Methods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 통계 기반 기법"
+    "## 통계 기반 기법 (Statistical Methods)"
    ]
   },
   {
@@ -97,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "['say', 'goodbye', 'and', 'you', '.', 'hello', 'i']"
+       "['goodbye', 'and', 'you', '.', 'say', 'hello', 'i']"
       ]
      },
      "execution_count": 5,
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "       [0, 0, 0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "       [0, 0, 0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,6 +714,249 @@
     ": 1이면 완전 동일, -1 이면 완전 반대\n",
     "\n",
     "![image](https://goofcode.github.io/assets/img/%E1%84%8B%E1%85%A7%E1%84%85%E1%85%A5%20%E1%84%80%E1%85%A1%E1%84%8C%E1%85%B5%20%E1%84%8B%E1%85%B2%E1%84%89%E1%85%A1%E1%84%83%E1%85%A9%20%E1%84%8E%E1%85%B3%E1%86%A8%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%87%E1%85%A5%E1%86%B8%20(Similarity%20Measure)/download.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cos_similarity(x,y):  # 코사인 유사도\n",
+    "    nx = x / np.srt(np.sum(x**2))\n",
+    "    ny = y / np.srt(np.sum(y**2))\n",
+    "    return np.dot(nx,ny)\n",
+    "# 입력 인수로 제로 벡터(원소가 모두 0인 벡터)가 들어오면, 'divide by zero' 오류 발생"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 개선된 코사인 유사도 : 작은 값 eps(엡실론)을 분모에 더해준다, 부동소수점 계산시 반올림되어 다른 값에 흡수된다\n",
+    "\n",
+    "def cos_similarity(x,y,eps=1e-8):  # 코사인 유사도\n",
+    "    nx = x / np.sqrt(np.sum(x**2) + eps)\n",
+    "    ny = y / np.sqrt(np.sum(y**2) + eps)\n",
+    "    return np.dot(nx,ny)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.23606797749979\n",
+      "3.1622776601683795\n",
+      "2.449489742783178\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Euclidean Distance : 0이면 완전 동일\n",
+    "def eucl_dist(x,y):\n",
+    "    return np.sqrt(np.sum((x-y)**2))\n",
+    "doc1 = np.array([2,3,0,1])\n",
+    "doc2 = np.array([1,2,3,1])\n",
+    "doc3 = np.array([2,1,2,2])\n",
+    "doc4 = np.array([1,1,0,1])\n",
+    "docQ = np.array([1,1,0,1])\n",
+    "\n",
+    "print(eucl_dist(doc1,docQ))\n",
+    "print(eucl_dist(doc2,docQ))\n",
+    "print(eucl_dist(doc3,docQ))\n",
+    "print(eucl_dist(doc4,docQ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'you': 0, 'say': 1, 'goodbye': 2, 'and': 3, 'i': 4, 'hello': 5, '.': 6}\n",
+      "you: [0 1 0 0 0 0 0]\n",
+      "i: [0 1 0 1 0 0 0]\n",
+      "0.7071067758832467\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_text = 'You say goodbye and I say hello.' \n",
+    "corpus, word_to_id, id_to_word = preprocess(my_text)\n",
+    "# print(corpus)\n",
+    "print(word_to_id)\n",
+    "vocab_size = len(word_to_id)  # 7\n",
+    "C = create_co_matrix(corpus, vocab_size)\n",
+    "# print(C)\n",
+    "\n",
+    "c0 = C[word_to_id['you']]  # 'you' 단어의 벡터, [0 1 0 0 0 0 0]\n",
+    "c1 = C[word_to_id['i']]    # 'i' 단어의 벡터, [0 1 0 1 0 0 0]\n",
+    "print('you:',c0)\n",
+    "print('i:',c1)\n",
+    "print(cos_similarity(c0,c1))\n",
+    "print(eucl_dist(c0,c1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple: [0 1 0 1 0 0 0]\n",
+      "banana: [0 1 0 0 0 0 1]\n",
+      "0.49999999749999996\n",
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = 'I like apple and you like banana.'\n",
+    "corpus, word_to_id, id_to_word = preprocess(text)\n",
+    "# print(corpus)\n",
+    "# print(word_to_id)\n",
+    "vocab_size = len(word_to_id) \n",
+    "C = create_co_matrix(corpus, vocab_size)\n",
+    "\n",
+    "c0 = C[word_to_id['apple']]  \n",
+    "c1 = C[word_to_id['banana']]   \n",
+    "print('apple:',c0)\n",
+    "print('banana:',c1)\n",
+    "print(cos_similarity(c0,c1))\n",
+    "print(eucl_dist(c0,c1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 유사 단어의 랭킹 표시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def most_similar(query, word_to_id, id_to_word, word_matrix, top=5):\n",
+    "    if query not in word_to_id:\n",
+    "        print('%s(을)를 찾을 수 없습니다.' % query)\n",
+    "        return\n",
+    "\n",
+    "    print('\\n[query] ' + query)\n",
+    "    query_id = word_to_id[query]\n",
+    "    query_vec = word_matrix[query_id]\n",
+    "\n",
+    "    # 코사인 유사도 계산\n",
+    "    vocab_size = len(id_to_word)\n",
+    "\n",
+    "    similarity = np.zeros(vocab_size)\n",
+    "    for i in range(vocab_size):\n",
+    "        similarity[i] = cos_similarity(word_matrix[i], query_vec)\n",
+    "\n",
+    "    # 코사인 유사도를 기준으로 내림차순으로 출력\n",
+    "    count = 0\n",
+    "    for i in (-1 * similarity).argsort():\n",
+    "        if id_to_word[i] == query:  # 동일 단어는 제외\n",
+    "            continue\n",
+    "        print(' %s: %s' % (id_to_word[i], similarity[i]))\n",
+    "\n",
+    "        count += 1\n",
+    "        if count >= top:\n",
+    "            return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([100, -20, 2])\n",
+    "x.argsort() # 오름차순으로 정렬하여 인덱스를 반환\n",
+    "(-x).argsort() # 내림차순"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'you': 0, 'say': 1, 'goodbye': 2, 'and': 3, 'i': 4, 'hello': 5, '.': 6}\n",
+      "\n",
+      "[query] you\n",
+      " goodbye: 0.7071067758832467\n",
+      " i: 0.7071067758832467\n",
+      " hello: 0.7071067758832467\n",
+      " say: 0.0\n",
+      " and: 0.0\n",
+      " .: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_text = 'You say goodbye and I say hello.' \n",
+    "corpus, word_to_id, id_to_word = preprocess(my_text)\n",
+    "# print(corpus)\n",
+    "print(word_to_id)\n",
+    "vocab_size = len(word_to_id)  # 7\n",
+    "C = create_co_matrix(corpus, vocab_size)\n",
+    "most_similar('you',word_to_id,id_to_word,C,top=vocab_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[query] hello\n",
+      " you: 0.7071067758832467\n",
+      " goodbye: 0.49999999749999996\n",
+      " i: 0.49999999749999996\n",
+      " say: 0.0\n",
+      " and: 0.0\n",
+      " .: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_similar('hello',word_to_id,id_to_word,C,top=vocab_size)"
    ]
   }
  ],
